k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ses-sns-events
  namespace: prd
spec:
  selector:
    app: ses-sns-events
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
