k8s/ingress-tls.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ses-sns-events-tls
  namespace: prd
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ses.example.com
      secretName: ses-sns-events-tls
  rules:
    - host: ses.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ses-sns-events
                port:
                  number: 80
