k8s/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ses-sns-events
  namespace: prd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ses.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ses-sns-events
                port:
                  number: 80
